log/build_2023-12-31_03-59-18/mypkg/stderr.log
  File "/home/nishi/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 6
    def __init__(selfn node)
                       ^
SyntaxError: invalid syntax

